k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mira-cameras
  namespace: mira-cameras
  labels:
    app: mira-cameras
spec:
  selector:
    app: mira-cameras
  ports:
    - name: http
      port: 8080
      targetPort: http
